# ticinfo

./: LICENSE  README.md  pyproject.toml  setup.py
src/ticinfo/: __init__.py  toco.py  version.py
toco/: __init__.py  toco.py  version.py
